--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@mdi/font": "5.9.55",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
+    "jspdf": "^2.5.1",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vuetify": "^3.0.0-beta.0",
